--- a/static/teacher_dashboard.html
+++ b/static/teacher_dashboard.html
@@ -121,8 +121,16 @@
                             </select>
                         </div>
                         <div class="form-group">
-                            <label>4. Total Students *</label>
-                            <input type="number" id="sessionTotalStudents" placeholder="e.g., 50" min="1" max="500" required>
+                            <label>4. Division *</label>
+                            <select id="sessionDivision" required>
+                                <option value="">Select Division</option>
+                                <option value="Division A">Division A</option>
+                                <option value="Division B">Division B</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label>5. Total Students *</label>
+                            <input type="number" id="sessionTotalStudents" placeholder="e.g., 10" min="1" max="500" required>
                         </div>
                     </div>
                     <button type="submit" class="btn btn-success">Create Session</button>
@@ -142,6 +150,7 @@
                         <div class="qr-timer" id="qrTimer">Generating...</div>
                         <div class="qr-info">
                             <p><strong>Subject:</strong> <span id="qrSubject">-</span></p>
+                            <p><strong>Division:</strong> <span id="qrDivision">-</span></p>
                             <p><strong>Present:</strong> <span id="qrPresentCount">0</span> / <span id="qrTotalStudents">0</span></p>
                             <div class="progress-bar">
                                 <div class="progress-fill" id="attendanceProgress" style="width: 0%"></div>
@@ -206,60 +215,89 @@
                 <!-- WiFi Networks List -->
                 <div id="wifiNetworksContainer">
                     <h3 style="margin-bottom: 1rem;">Active WiFi Networks</h3>
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th>SSID</th>
-                                <th>Location</th>
-                                <th>Branch</th>
-                                <th>Room</th>
-                                <th>Status</th>
-                                <th>Actions</th>
-                            </tr>
-                        </thead>
-                        <tbody id="wifiNetworksBody">
-                            <tr>
-                                <td colspan="6" style="text-align: center;">
-                                    <div class="spinner"></div>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
+                    <div class="table-responsive">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>SSID</th>
+                                    <th>Location</th>
+                                    <th>Branch</th>
+                                    <th>Room</th>
+                                    <th>Status</th>
+                                    <th>Actions</th>
+                                </tr>
+                            </thead>
+                            <tbody id="wifiNetworksBody">
+                                <tr>
+                                    <td colspan="6" style="text-align: center;">
+                                        <div class="spinner"></div>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
 
             <!-- Recent Sessions -->
             <div class="section-card">
-                <h2>📅 Recent Sessions</h2>
+                <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 1rem;">
+                    <h2 style="margin: 0;">📅 Recent Sessions</h2>
+                    <div style="display: flex; gap: 0.5rem;">
+                        <button class="btn btn-primary" onclick="refreshRecentSessions()" id="refreshSessionsBtn" style="padding: 0.4rem 0.8rem; font-size: 0.75rem;">
+                        <span id="refreshIcon">🔄</span> Refresh
+                    </button>
+                        <button class="btn btn-secondary" onclick="clearRecentSessions()" id="clearSessionsBtn" style="padding: 0.4rem 0.8rem; font-size: 0.75rem;">
+                            Clear
+                        </button>
+                    </div>
+                </div>
                 <div id="recentSessionsContainer">
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th>Session ID</th>
-                                <th>Subject</th>
-                                <th>Branch</th>
-                                <th>Date</th>
-                                <th>Present</th>
-                                <th>Status</th>
-                                <th>Actions</th>
-                            </tr>
-                        </thead>
-                        <tbody id="recentSessionsBody">
-                            <tr>
-                                <td colspan="7" style="text-align: center;">
-                                    <div class="spinner"></div>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
+                    <div class="table-responsive">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>Session ID</th>
+                                    <th>Subject</th>
+                                    <th>Branch</th>
+                                    <th>Division</th>
+                                    <th>Date</th>
+                                    <th>Present</th>
+                                    <th>Status</th>
+                                    <th>Manage Session</th>
+                                    <th>Actions</th>
+                                </tr>
+                            </thead>
+                            <tbody id="recentSessionsBody">
+                                <tr>
+                                    <td colspan="9" style="text-align: center;">
+                                        <div class="spinner"></div>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <script src="/js/mobile-utils.js"></script>
-    <script src="/js/api.js"></script>
-    <script src="/js/teacher_dashboard.js"></script>
+    <!-- Session Analysis Modal -->
+    <div id="sessionAnalysisModal" class="modal-overlay" style="display: none;">
+        <div class="modal-content">
+            <button onclick="handleCloseModal(event)" class="modal-close-btn" aria-label="Close">&times;</button>
+            
+            <h2 style="margin-top: 0; margin-bottom: 1.5rem;">📊 Session Analysis</h2>
+            
+            <div id="sessionAnalysisContent">
+                <div class="spinner"></div>
+            </div>
+        </div>
+    </div>
+
+    <script src="/js/mobile-utils.js?v=2.0"></script>
+    <script src="/js/api.js?v=2.0"></script>
+    <script src="/js/teacher_dashboard.js?v=2.0"></script>
 </body>
 </html>
 
